--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/iraquint/modern-js-tooling/issues"
   },
-  "homepage": "https://github.com/iraquint/modern-js-tooling#readme"
+  "homepage": "https://github.com/iraquint/modern-js-tooling#readme",
+  "devDependencies": {
+    "webpack": "=4.40.2",
+    "webpack-cli": "=3.3.9"
+  }
 }
