--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.config.prod.js",
+    "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,21 @@
   },
   "homepage": "https://github.com/iraquint/modern-js-tooling#readme",
   "devDependencies": {
+    "@babel/cli": "=7.6.0",
+    "@babel/core": "=7.6.0",
+    "@babel/plugin-proposal-class-properties": "=7.5.5",
+    "@babel/preset-env": "=7.6.0",
+    "@babel/preset-react": "=7.0.0",
+    "babel-loader": "=8.0.6",
+    "html-webpack-plugin": "=3.2.0",
     "webpack": "=4.40.2",
-    "webpack-cli": "=3.3.9"
+    "webpack-cli": "=3.3.9",
+    "webpack-dev-server": "=3.8.1",
+    "webpack-merge": "=4.2.2"
+  },
+  "dependencies": {
+    "prop-types": "=15.7.2",
+    "react": "=16.9.0",
+    "react-dom": "=16.9.0"
   }
 }
