--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config webpack.config.dev.js",
+    "dev:hot": "npm run dev -- --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,11 +23,15 @@
     "@babel/cli": "=7.6.0",
     "@babel/core": "=7.6.0",
     "@babel/plugin-proposal-class-properties": "=7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "=7.2.0",
     "@babel/preset-env": "=7.6.0",
     "@babel/preset-react": "=7.0.0",
     "babel-loader": "=8.0.6",
+    "css-loader": "=3.2.0",
     "html-webpack-plugin": "=3.2.0",
+    "style-loader": "=1.0.0",
     "webpack": "=4.40.2",
+    "webpack-bundle-analyzer": "=3.5.0",
     "webpack-cli": "=3.3.9",
     "webpack-dev-server": "=3.8.1",
     "webpack-merge": "=4.2.2"
@@ -34,6 +39,7 @@
   "dependencies": {
     "prop-types": "=15.7.2",
     "react": "=16.9.0",
-    "react-dom": "=16.9.0"
+    "react-dom": "=16.9.0",
+    "react-hot-loader": "=4.12.13"
   }
 }
